k8s/mongo/mongo-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: kube-mongo
  labels:
    name: mongo
spec:
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    role: mongo
    environment: prod
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mongo
  namespace: kube-mongo
spec:
  serviceName: "mongo"
  replicas: 3
  template:
    metadata:
      labels:
        role: mongo
        environment: prod
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongo
        image: mongo
        command:
          - mongod
          - "--replSet"
          - rs0
          - "--smallfiles"
          - "--noprealloc"
          - "--bind_ip"
          - "0.0.0.0"
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: mongo-data
            mountPath: /data/db
      - name: mongo-sidecar
        image: cvallance/mongo-k8s-sidecar
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
      namespace: kube-mongo
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
