k8s/mongo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-mongo-ingress
  namespace: kube-mongo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - mongo.trustamust.com
    secretName: letsencrypt-prod
  rules:
  - host: mongo.trustamust.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mongo-express
          servicePort: 8081
